--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
+    "react-use-audio-player": "^3.0.2",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
